--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  --black: #242424;
+  /* --white: #F3F6F9; */
 }
 
 .logo {
@@ -39,4 +41,12 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10vh;
 }
