--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,14 @@
   padding: 2em;
 }
 
+.simple-card {
+  width: 50vw;
+  max-width: 410px;
+  height: 70vh;
+  max-height: 500px;
+  box-shadow: 0px 0px 5px #d6d6d6a6;
+}
+
 .read-the-docs {
   color: #888;
 }
@@ -50,3 +58,10 @@
   width: 100%;
   height: 10vh;
 }
+
+.header-button {
+  color: white !important;
+  float: right;
+  height: 100%;
+  margin: 0 1vw;
+};
